Fix the wrap on navigation line

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ h1 {
 
 .nav li {
   display: inline;
-  white-space: nowrap;
 }
 
 .nav a {
